<resources>
    <string name="app_name">SDK Online Bazaar</string>
    <string name="signIn">Sign In</string>
    <string name="rememberMe">Remember me</string>
    <string name="support">Support</string>
    <string name="demo">Demo</string>
    <string name="manual">Manual</string>
    <string name="language">Choose Language</string>
    <string name="google_api_key">AIzaSyB1wAl5Z9CMUr8aM5rQqzpOuNCvEEZicJA</string>
</resources>