<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/material_grey200">

    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="fill_parent"
        android:layout_height="100.0dip"
        android:layout_marginStart="32.0dip"
        android:layout_marginTop="32.0dip"
        android:layout_marginEnd="32.0dip"
        android:scaleType="fitCenter"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_route" />

    <LinearLayout
        android:id="@+id/linearLayout_buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32.0dip"
        android:layout_marginTop="60.0dip"
        android:layout_marginRight="32.0dip"
        android:layout_marginBottom="32.0dip"
        android:background="@color/material_black"
        android:orientation="vertical"
        android:paddingStart="16.0dip"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoimg"
        app:layout_constraintVertical_bias="0.298">
        <!-- android:background="@color/primary"-->
        <LinearLayout
            android:id="@+id/linearLayout_inputs"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="2.0"
            android:background="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/username"
                style="@style/LoginEditText"
                android:layout_weight="0.5"
                android:hint="Email"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_password_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                style="@style/LoginEditText"
                android:layout_weight="0.5"
                android:hint="Password"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_powered_by"
        style="@style/SignUpBottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:fontFamily="@font/opensans_regular"
        android:text="New User?"


        android:onClick="gotoSignupActivity"
        android:clickable="true"
        android:textColor="@color/material_grey700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_gpswox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_gpswox"
        style="@style/SignUpBottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4.0dip"
        android:fontFamily="@font/opensans_regular"
        android:text="Sign Up"
        android:onClick="gotoSignupActivity"
        android:clickable="true"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/textView_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_powered_by"
        app:layout_constraintTop_toTopOf="@+id/textView_powered_by" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="17.0dip"
        android:layout_height="17.0dip"
        android:layout_marginTop="8.0dip"
        android:background="@drawable/ic_checkbox"
        android:button="@null"
        app:layout_constraintStart_toStartOf="@+id/signin"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <Button
        android:id="@+id/signin"
        style="@style/SignInButton"
        android:layout_width="0.0dip"
        android:layout_marginTop="20dp"
        android:layout_weight="1.0"
        android:onClick="persionSignIn"
        android:text="@string/signIn"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_buttons_container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_buttons_container"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_buttons_container" />

    <Button
        android:id="@+id/register"
        style="@style/SignInButton"
        android:layout_width="0.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_weight="1.0"
        android:text="@string/signIn"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_buttons_container"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_buttons_container"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_buttons_container" />

  <!--  <ProgressBar
        android:id="@+id/am_progressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textView_remember_me"
        style="@style/LoginTextView"
        android:layout_marginStart="16.0dip"
        android:text="@string/rememberMe"
        app:layout_constraintBottom_toBottomOf="@+id/rememberMeCheckBox"
        app:layout_constraintStart_toEndOf="@+id/rememberMeCheckBox"
        app:layout_constraintTop_toTopOf="@+id/rememberMeCheckBox" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8.0dip"
        android:layout_marginEnd="8.0dip"
        android:layout_marginBottom="8.0dip"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="4.0"
        app:layout_constraintBottom_toTopOf="@+id/textView_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/supportButton"
            style="@style/LoginBottomButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/support"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/demoButton"
            style="@style/LoginBottomButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/demo"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView_manual"
            style="@style/LoginBottomButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/manual"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/flag_clickzone"
            style="@style/LoginBottomButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/language"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>